RESOLVED FIXED220676
Scroll position is lost when homing out and resuming Safari on iOS
https://bugs.webkit.org/show_bug.cgi?id=220676
Summary Scroll position is lost when homing out and resuming Safari on iOS
Simon Fraser (smfr)
Reported 2021-01-15 16:41:43 PST
Scroll position is lost when homing out and resuming Safari on iOS
Attachments
Patch (2.75 KB, patch)
2021-01-15 16:45 PST, Simon Fraser (smfr)
no flags
Simon Fraser (smfr)
Comment 1 2021-01-15 16:45:16 PST
Simon Fraser (smfr)
Comment 2 2021-01-15 16:45:45 PST
EWS
Comment 3 2021-01-15 19:44:43 PST
Committed r271551: <https://trac.webkit.org/changeset/271551> All reviewed patches have been landed. Closing bug and clearing flags on attachment 417749 [details].
Geoffrey Garen
Comment 4 2021-01-19 10:53:24 PST
I believe we have code that avoids sending certain JS events during snapshotting (resize and orientation). Maybe it would be less risky to run the scrolling code and just avoid sending the JS event that would trigger programmatic scroll?
Simon Fraser (smfr)
Comment 5 2021-01-19 10:57:02 PST
The programmatic scroll is not from JS. It's from layout (when you layout narrow, and then wide, you may need to adjust your scroll offset because the current one is no longer valid).
Note You need to log in before you can comment on or make changes to this bug.